[package]
name = "sonic_client"
version = "0.1.0"
authors = ["FrontMage <xbgxwh@outlook.com>"]
readme = "./README.md"
keywords = ["sonic", "client"]
categories = ["lib"]
license = "GPL"
appveyor = { repository = "https://github.com/FrontMage/sonic_client", branch = "master", service = "github" }
description = "a client lib for sonic search"

[dependencies]
mio = "0.6.16"
